# Memory

./: .gitignore  CLAUDE.md  LICENSE  README.md  gw_residuals.py  provenance.txt  pyproject.toml  setenv.sh  style.mplstyle  submit.sh  utils.py
data/: .gitignore  NRSur7dq4.h5  README.md  SEOBNRv4ROM_v3.0.hdf5  download.sh  download_glitch_frames.sh
memory/: gw_memory.py  gw_residuals.py
notebooks/: GW250114.ipynb
paper/: paper.tex  refs.bib  results_macros.tex
scripts/: check.py  check_nsbh_m2_cut.py  compare_mass_cuts.py  compute_gw_memory_for_GWTC.py  events.txt  events_rerun3.txt  events_rerun4.txt  events_rerun5.txt  events_rerun6.txt  events_rerun9.txt  forecast_A_parametric_hyperposterior.py  forecast_mu_tgr_fisher_heteroskedastic.py  forecast_mu_tgr_sensitivity_curves.py  make_paper_outputs.py  plot_compare_joint_corner.py  plot_gw230606_asd_comparison.py  plot_gw230606_data_comparison.py  plot_gw230606_fd_comparison.py  plot_gw230606_h1_fft_sliding.py  plot_gw230606_l1_16khz_fft_sliding.py  plot_gw230606_l1_fft_sliding.py  plot_gw230606_memory_weights.py  plot_gw230606_td_spectrogram.py  plot_gw230606_whitened_td.py  plot_memory_diagnostics.py  plot_ppd.py  rank_memory_events.py  run_all_events.sh  run_analysis.py  run_hierarchical_analysis.py  submit_script.sh  submit_script_check.sh  submit_script_rerun3.sh  submit_script_rerun4.sh  submit_script_rerun5.sh  submit_script_rerun8.sh  submit_script_rerun9.sh  test_gwtc.py
taskfiles/: TaskFileMemory  TaskFileMemory_all  TaskFileMemory_astro  TaskFileMemory_astro_ctrl  TaskFileMemory_e2e_test  (+9 more)
(+28 files in other folders)
